--- a/HDR Engine.ipynb
+++ b/HDR Engine.ipynb
@@ -1949,7 +1949,8 @@
     "\n",
     "    predicted_class = torch.argmax(prediction).item()\n",
     "    # print(\"Ground truth label:\", label)\n",
-    "    print(f\"Predicted Digit: {predicted_class}\")\n",
+    "    print(f\"Predicted Digit: {predicted_cl\n",
+    "          iass}\")\n",
     "\n",
     "    res = \"\"\n",
     "    if label == predicted_class:\n",
